[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/melee weapon/script.gd" type="Script" id=1]
[ext_resource path="res://power ups/weapon/bat.tres" type="Resource" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 10 )

[node name="Weapon" type="Position2D"]
position = Vector2( 512, 304 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
_weapon_data = ExtResource( 3 )
debug_swing = true

[node name="Tween" type="Tween" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 1 )

[node name="CooldownTimer" type="Timer" parent="."]

[connection signal="body_entered" from="HitBox" to="." method="_on_HitBox_body_entered"]
